<resources>
    <string name="app_name">BibliotecaRikkazo</string>
    <string name="title_libros">Libros</string>
    <string name="title_prestamos">Prestamos</string>
    <string name="title_perfil">Perfil</string>
    <string name="valetlogin">Ingrese su usuario</string>
    <string name="valetpassword">Ingrese su contraseña</string>
    <string name="valbtningresar">Ingresar</string>
    <string name="valbtncrearcuenta">Crear Cuenta</string>
    <string name="chbGuardarContrasenha">¿Guardar contraseña?</string>
    <string name="hntNombre">Introduzca su nombre</string>
    <string name="hntApellido">Introduzca su apellido</string>
    <string name="lblUsername">Nombre de usuario:</string>
    <string name="hntUsername">Nombre de usuario</string>
    <string name="hntCorreo">Correo</string>
    <string name="lblCorreo">Correo</string>
    <string name="hntPassword">Introduzca contraseña</string>
    <string name="lblPassword">Contraseña</string>
    <string name="lblConfirmPassword">Confirmar contraseña</string>
    <string name="hntConfirmPassword">Vuelva a introducir contraseña</string>
    <string name="btnActualizarPerfil">Actualizar</string>

    <string-array name="gender">
        <item>Seleccione sexo:</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_aboutus">Nosotros</string>
    <string name="Autores">Autores</string>

    <string name="textAboutUs">
        Dota 2 es un videojuego perteneciente al género de Arena de batalla en línea ARTS («estrategia de acción en tiempo real»), también conocido como MOBA, lanzado el 9 de julio del año 2013. El juego fue desarrollado por la empresa Valve Corporation. El título fue anunciado oficialmente el 13 de octubre de 2010, en un artículo en el sitio web Game Informer;1 posteriormente, entró en su etapa Beta a principios del 2011, y finalmente se lanzó al público en general a través de Steam el 9 de julio de 2013 para Microsoft Windows, y el 18 de julio de 2013 para OS X y Linux, el 17 de junio de 2015 Valve lanzó la beta del juego usando el nuevo motor gráfico Source 2 [Dota 2 Reborn], cliente que será el único y definitivo poco después del The International 2015 según el anuncio se mantuvo fiel a su predecesor, a la vez que incrementó la calidad del producto final, además de ofrecer una experiencia envolvente y gratificante para los jugadores. Sin embargo, Dota 2 es actualmente criticado por tener una dura curva de aprendizaje y una comunidad de las más hostiles en el ámbito de internet. Actualmente es el juego más jugado de Steam con más de 40.6 millones de jugadores2​ únicos que se conectan casi en su totalidad con frecuencia diario y ha llegado a ser incluido en el Guinness World Records Gamers Edition

        Valve Corporation organiza de manera anual el campeonato mundial El Internacional, que en su primera edición fue jugado en la ciudad de Colonia, en Alemania, en el año 2011. La edición de 2015 en el Key Arena (Seattle, Estados Unidos) repartió una cantidad 18.429.613 USD$5​ y en la edición de 2016 se repartieron unos $20,770,460 USD$.6 Actualmente el The International es el torneo anual de e-sports que más dinero entrega en premios. También otro torneo importante que organiza Valve Corporation son las llamadas Majors,8​ las cuales empezaron en noviembre de 2015, siendo tres al año y entregando $3,000,000 USD en premios.9​El año 2017 el premio al mejor equipo de Dota 2 fue de $10,862,683 para el equipo ganador.
    </string>
    <string name="btnEncontrar">Encuentranos</string>


</resources>