<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="edu.pe.idat.bibliotecarikkazo.ui.libros.LibrosFragment"
            android:label="@string/title_libros"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="edu.pe.idat.bibliotecarikkazo.ui.dashboard.DashboardFragment"
            android:label="@string/title_prestamos"
            tools:layout="@layout/fragment_dashboard"/>

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="edu.pe.idat.bibliotecarikkazo.ui.notifications.NotificationsFragment"
            android:label="@string/title_perfil"
            tools:layout="@layout/fragment_notifications"/>

    <fragment
        android:id="@+id/navigation_aboutus"
        android:name="edu.pe.idat.bibliotecarikkazo.ui.aboutUs.AboutUsFragment"
        android:label="Nosotros"
        tools:layout="@layout/fragment_about_us"
        />

    <fragment
        android:id="@+id/navigation_autores"
        android:name="edu.pe.idat.bibliotecarikkazo.ui.autores.autorFragment"
        android:label="Autores"
        tools:layout="@layout/fragment_autor"
        />
</navigation>