<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp"
        android:text="Editar perfil de: "
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/lblUsuario">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="160dp"
                android:text="Nombres: "
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/etNombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.349"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/hntNombre"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/HintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="135dp"
                android:text="Apellidos:"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.303"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNombre" />

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/hntApellido"
                android:inputType="text"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/HintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="135dp"
                android:text="@string/lblUsername"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.421"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etApellido" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/hntUsername"
                android:inputType="text"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/HintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="135dp"
                android:text="@string/lblCorreo"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.274"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUsername" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/hntCorreo"
                android:inputType="text"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/HintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="135dp"
                android:text="@string/lblPassword"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.303"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCorreo" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/hntPassword"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/HintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="135dp"
                android:text="@string/lblConfirmPassword"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.445"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/hntConfirmPassword"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/HintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <Spinner
                android:id="@+id/spSexo"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:entries="@array/gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="135dp"
                android:text="Sexo"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/spSexo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.248"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="117dp"
        android:layout_height="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/btnActualizarPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toEndOf="@+id/lblUsuario"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>